# TARC

./: CMakeLists.txt  CMakeListsStub.txt  CMakeStub.txt  CmakeListsStub.txt  MODIFICHE_v103.md  MODIFICHE_v104.md  README.md  REFACTORING_NOTES.md  vcpkg.json
.github/workflows/: main.yml  stub.yml
include/: engine.cpp  engine.h  error.h  io.h  license.h  thread_pool.h  types.h  ui.h
include/tarc/codec/: codec_selector.h
include/tarc/core/: compressor.h
include/tarc/io/: chunk_stream.h  file_reader.h  toc_manager.h
include/tarc/security/: checksum.h  license.h  validator.h
include/tarc/ui/: ui.h
include/tarc/util/: constants.h  result.h  types.h
src/: engine.cpp  error.cpp  io.cpp  io.h  license.cpp  license.h  main.cpp  main.cpp.cpp  stub.cpp  types.h  ui.cpp
src/codec/: codec_selector.cpp
src/io/: chunk_stream.cpp  file_writer.cpp  posix_file_reader.cpp  toc_manager.cpp  win32_file_reader.cpp
src/security/: checksum.cpp  license.cpp  validator.cpp
src/ui/: ui.cpp
